gke/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rustmq
  labels:
    app: rustmq
    security.istio.io/tlsMode: istio
